--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "react-media-ui": "^0.0.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "use-long-press": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-public": "npm run build && netlify deploy --prod"
   },
   "eslintConfig": {
     "extends": [
