--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@netflixdesign/hawkins-icons": "^2.5.0",
     "@netflixdesign/hawkins-tokens": "^1.5.0",
     "@react-spring/web": "^9.4.5",
+    "@react-three/drei": "^9.16.0",
+    "@react-three/fiber": "^8.0.27",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
@@ -23,6 +25,8 @@
     "react-media-ui": "^0.0.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "simplex-noise": "^3.0.1",
+    "three": "^0.139.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dat.gui": "^0.7.9"
   }
 }
