--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@netflixdesign/hawkins-icons": "^2.5.0",
     "@netflixdesign/hawkins-tokens": "^1.5.0",
     "@react-spring/web": "^9.4.5",
+    "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.16.0",
     "@react-three/fiber": "^8.0.27",
+    "@react-three/postprocessing": "^2.4.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
@@ -15,6 +17,7 @@
     "classnames": "^2.3.1",
     "core-hooks": "^2.0.0",
     "framer-motion": "^6.3.16",
+    "lerp": "^1.0.3",
     "lodash": "^4.17.21",
     "lodash-move": "^1.1.1",
     "netlify-cli": "^10.5.1",
@@ -27,6 +30,7 @@
     "react-scripts": "5.0.1",
     "simplex-noise": "^3.0.1",
     "three": "^0.139.2",
+    "threejs-meshline": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
