--- a/netlify.toml
+++ b/netlify.toml
@@ -28,3 +28,9 @@
 [[headers]]
   # This sets auth for all routes
   for = "/*"
+
+  # This actually sets the username and password. Feel free to change it; the default is:
+  # username: nf-mobile
+  # password: mobilefun!
+  [headers.values]
+    Basic-Auth = "nf-mobile:mobilefun!"
